Introducing constants package

--- a/utility/pom.xml
+++ b/utility/pom.xml
@@ -11,6 +11,11 @@
 			<artifactId>contract</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>startsmart.base</groupId>
+			<artifactId>constant</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
